--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "eyevinn-intercom",
+	"name": "lucas-lol",
 	"version": "0.1.0",
 	"main": "dist/main.js",
 	"type": "module",
@@ -9,7 +9,8 @@
 		"package": "run build && companion-module-build",
 		"build": "rimraf dist && run build:main",
 		"build:main": "tsc -p tsconfig.build.json",
-		"dev": "tsc -p tsconfig.build.json --watch",
+		"dev": "yarn build:watch",
+		"build:watch": "tsc -p tsconfig.json --watch",
 		"lint:raw": "eslint",
 		"lint": "run lint:raw ."
 	},
@@ -19,10 +20,10 @@
 		"url": "git+https://github.com/bitfocus/companion-module-your-module-name.git"
 	},
 	"dependencies": {
-		"@companion-module/base": "~1.11.2"
+		"@companion-module/base": "~1.11.3"
 	},
 	"devDependencies": {
-		"@companion-module/tools": "^2.1.1",
+		"@companion-module/tools": "^2.2.2",
 		"@types/node": "^22.10.2",
 		"eslint": "^9.17.0",
 		"husky": "^9.1.7",
