--- a/companion/manifest.json
+++ b/companion/manifest.json
@@ -13,8 +13,8 @@
 			"email": "lucas.maupin@eyevinn.se"
 		},
 		{
-			"name": "Phillip Ivan Pietruschka",
-			"email": "ivanpietruschka@gmail.com"
+			"name": "Sandra Larsson",
+			"email": "sandra.larsson@eyevinn.se"
 		}
 	],
 	"legacyIds": [],
