--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	},
 	"dependencies": {
 		"@companion-module/base": "~1.11.3",
+		"open": "^10.1.0",
 		"ws": "^8.18.1"
 	},
 	"devDependencies": {
