--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"dev": "yarn build:watch",
 		"build:watch": "tsc -p tsconfig.json --watch",
 		"lint:raw": "eslint",
-		"lint": "run lint:raw ."
+		"lint": "run lint:raw .",
+                "postversion": "git push && git push --tags"
 	},
 	"license": "MIT",
 	"repository": {
